# reform

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  Readme.md
benches/: benches.rs  fibonacci.frm  fibonacci.reform  sort.rs  tracen.frm  tracen.reform  tracen_native.frm  zp_pow.rs  zp_solve.rs
benches/comparison/: expand.frm  expand.reform  fibonacci.frm  fibonacci.m  fibonacci.reform  gcd.frm  gcd.reform  tracen.frm  tracen.m  tracen.reform  tracen_native.frm
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  introduction.rst  make.bat  pattern.rst  quickstart.rst  reference.rst  reform_doctest.py  reformdomain.py  reformlang.py  variables.rst
examples/: argument.frm  differentiate.frm  dollar.frm  dollarindex.frm  expressions.frm  extract.frm  fibonacci.frm  gcd.frm  gcdbench.frm  global_for.frm  id.frm  inside.frm  linear.frm  matchassign.frm  noncommutative.frm  nonlocal.frm  parallel.frm  polyrat.frm  symmetric.frm
src/: benches.rs  expand.rs  id.rs  lib.rs  main.rs  module.rs  mutliplytest  normalize.rs  number.rs  parser.rs  parser_old.rs  serialize.rs  sort.rs  stream_split.rs  streaming.rs  structure.rs  tests.rs  tools.rs
src/parser/: grammar.pest  mod.rs
src/poly/: c_api.rs  convert.rs  exponent.rs  mod.rs  polynomial.rs  python_api.rs  ring.rs
src/poly/raw/: finitefield.rs  fraction.rs  gcd.rs  mod.rs  monomial.rs  multivar.rs  optimize.rs  overflowing.rs  zp.rs  zp_mod.rs  zp_solve.rs
