[package]
name = "reform"
version = "0.1.0"
readme = "README.md"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[profile.release]
codegen-units = 1

[features]
profile = ["cpuprofiler"]

[dependencies]
itertools = "^0.7.7"
clap = "^2.30.0"
log = "0.4.1"
env_logger = "0.5.4"
rand = "0.4.2"
combine = "2.5.2"
byteorder = "1.1.0"
crossbeam = "0.3.2"
num-traits = "0.2"
cpuprofiler = { version = "0.0.3", optional = true }
