[package]
name = "reform"
version = "0.1.0"
readme = "README.md"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[profile.release]
codegen-units = 1
debug = true

[features]
profile = ["cpuprofiler"]

[dependencies]
itertools = "^0.7.7"
clap = "^2.30.0"
log = { version = "0.4.1", features = ["release_max_level_warn"] }
env_logger = "0.5.4"
rand = "0.4.2"
combine = "2.5.2"
byteorder = "1.1.0"
crossbeam = "0.3.2"
rug = { version = "1.0.1", default-features = false, features = ["integer", "rational"] }
num-integer = "0.1"
num-traits = "0.2"
ndarray = "0.11.0"
gmp-mpfr-sys = { version = "1.1.4", default-features = false, features = [] }
cpuprofiler = { version = "0.0.3", optional = true }
fastdivide = "0.2.0"
fnv = "1.0.3"
